--- a/Hyprcord.theme.css
+++ b/Hyprcord.theme.css
@@ -8,7 +8,7 @@
  */
 
 /* IMPORT ClearVision V7 */
-@import url(https://raw.githubusercontent.com/ClearVision/ClearVision-v7/refs/heads/master/ClearVision-v7-Vencord.css);
+@import url(https://raw.githubusercontent.com/ClearVision/ClearVision-v7/refs/heads/master/ClearVision-v7-BetterDiscord.theme.css);
 
 /* IMPORT Hyprcord */
 @import url(https://raw.githubusercontent.com/Getbricked/ClearVision-Aki/refs/heads/Hyprcord/main.css);
