--- a/Hyprcord-Aki.theme.css
+++ b/Hyprcord-Aki.theme.css
@@ -35,3 +35,9 @@
 
 /* Member List */
 @import url(https://raw.githubusercontent.com/Getbricked/ClearVision-Aki/refs/heads/Hyprcord/Aki-Edition/Member_List.css);
+
+/* SETTINGS */
+:root {
+    /* Background image */
+    --background-image: url(https://i.imgur.com/zU7YY60.jpeg);
+}
