--- a/Themes/server.css
+++ b/Themes/server.css
@@ -75,19 +75,24 @@
     margin: var(--global-margin);
 }
 
-/* ------------------- HOME ------------------- */
-
-/* Friend list */
-.visual-refresh .peopleColumn__133bf {
-    border-radius: 10px;
-    border: 1px solid var(--main-color);
-    margin-top: var(--global-margin);
-    margin-right: var(--global-margin);
+/* Outside margin */
+.visual-refresh .base_c48ade {
+    margin: var(--global-margin);
 }
 
-/* Now playing */
-.nowPlayingColumn__133bf {
+/* Top bar */
+#app-mount .bar_c38106:not(.show_c38106) {
+    border: 1px solid var(--main-color);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+}
+
+/* User panel */
+.visual-refresh .panels_c48ade {
     border-radius: 10px;
     border: 1px solid var(--main-color);
-    margin-top: var(--global-margin);
+    padding: 0px;
+    padding-left: 5px;
+    padding-right: 5px;
+    width: calc(100% - var(--global-margin)) !important;
 }
