--- a/Hyprcord-Aki.css
+++ b/Hyprcord-Aki.css
@@ -40,4 +40,5 @@
 :root {
     /* Background image */
     --background-image: url(https://i.imgur.com/zU7YY60.jpeg);
+    --global-margin: 20px;
 }
