Jugom's settings with some tweaks

--- a/Themes/forum.css
+++ b/Themes/forum.css
@@ -16,3 +16,10 @@
     border: 1px solid var(--main-color);
     margin-top: var(--global-margin);
 }
+
+/* Forum Notice */
+.visual-refresh .header__34c2c {
+    background: linear-gradient(to top, var(--main-color), transparent);
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
