--- a/Hyprcord-Aki.theme.css
+++ b/Hyprcord-Aki.theme.css
@@ -41,4 +41,5 @@
     /* Background image */
     --background-image: url(https://i.imgur.com/zU7YY60.jpeg);
     --global-margin: 20px;
+    --guildsize: 57;
 }
