--- a/Themes/global.css
+++ b/Themes/global.css
@@ -145,3 +145,22 @@
 .media_a22bfd {
     border-radius: 10px;
 }
+
+/* ------------------- DM VOICE CALL ------------------- */
+/* DM Voice */
+.wrapper_cb9592 .callContainer_cb9592 {
+    border: 1px solid var(--main-color);
+    border-radius: 10px;
+    margin-top: var(--global-margin);
+}
+
+.visual-refresh .wrapper_cb9592 .title_f75fb0 {
+    border: none;
+    margin: 0px;
+}
+
+/* Picture in picture */
+.borderRadius__6341f {
+    border-radius: 10px;
+    border: 1px solid var(--main-color);
+}
