--- a/Aki-Edition/Chat_Panel.css
+++ b/Aki-Edition/Chat_Panel.css
@@ -11,7 +11,6 @@
 .hidden__54ab5 {
     background: rgba(0, 0, 0, 1) !important;
     padding: 5px;
-    border-radius: 10px;
 }
 
 /* Mention */
@@ -57,6 +56,7 @@
 .visual-refresh .newMessagesBar__0f481 {
     border-radius: 10px;
     background: linear-gradient(360deg, var(--main-color), transparent);
+    border: none;
 }
 
 /* Server Invite link display */
