--- a/Themes/global.css
+++ b/Themes/global.css
@@ -147,7 +147,7 @@
 }
 
 /* ------------------- DM VOICE CALL ------------------- */
-/* DM Voice */
+/* Normal mode */
 .wrapper_cb9592 .callContainer_cb9592 {
     border: 1px solid var(--main-color);
     border-radius: 10px;
@@ -157,6 +157,31 @@
 .visual-refresh .wrapper_cb9592 .title_f75fb0 {
     border: none;
     margin: 0px;
+}
+
+/* Fullscreen mode */
+.wrapper_cb9592 .callContainer_cb9592 {
+    border: 1px solid var(--main-color);
+    border-right: 1px solid var(--main-color) !important;
+    border-top: 1px solid var(--main-color) !important;
+    border-radius: 10px;
+    margin-top: var(--global-margin);
+}
+
+.visual-refresh .wrapper_cb9592 .container__9293f {
+    border-radius: 10px;
+    border: none;
+    margin-top: var(--global-margin);
+}
+
+.wrapper_cb9592.fullScreen_cb9592 .videoWrapper__6981d {
+    border-radius: 10px;
+    border: 1px solid var(--main-color);
+}
+
+/* Real full screen */
+.wrapper_cb9592.fullScreen_cb9592:has(.noBorder__2f4f7) .videoWrapper__6981d {
+    border: none;
 }
 
 /* Picture in picture */
