--- a/Themes/global.css
+++ b/Themes/global.css
@@ -18,13 +18,6 @@
     padding-right: var(--global-margin);
 }
 
-/* Top bar */
-#app-mount .bar_c38106:not(.show_c38106) {
-    border: 1px solid var(--main-color);
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-}
-
 /* User panel */
 .visual-refresh .panels_c48ade {
     border-radius: 10px;
@@ -63,32 +56,23 @@
 }
 
 /* ------------------- FRIENDS ------------------- */
-
-/* Friend list */
+/* Now playing + Friend list */
+.nowPlayingColumn__133bf,
 .visual-refresh .peopleColumn__133bf {
     border-radius: 10px;
     border: 1px solid var(--main-color);
     margin-top: var(--global-margin);
+}
+
+/* Friend list */
+.visual-refresh .peopleColumn__133bf {
     margin-right: var(--global-margin);
 }
 
-/* Now playing */
-.nowPlayingColumn__133bf {
-    border-radius: 10px;
-    border: 1px solid var(--main-color);
-    margin-top: var(--global-margin);
-}
-
-/* ------------------- NITRO ------------------- */
-/* Nitro */
-.mainPageScroller_ca1a02 {
-    border-radius: 10px;
-    margin-top: var(--global-margin);
-    border: 1px solid var(--main-color);
-}
-
 /* ------------------- SHOP ------------------- */
-/* Header */
+/* Shop header + Shop + Nitro */
+.mainPageScroller_ca1a02,
+.visual-refresh .shop__08415,
 .mainPageScroller_ca1a02 {
     border-radius: 10px;
     margin-top: var(--global-margin);
@@ -99,31 +83,22 @@
     background: transparent;
 }
 
-/* Shop */
-.visual-refresh .shop__08415 {
-    border-radius: 10px;
-    border: 1px solid var(--main-color);
-    margin-top: var(--global-margin);
-    height: 100% !important;
-}
-
 /* ------------------- SETTINGS ------------------- */
 /* Sidebar */
 .visual-refresh .sidebarRegion__23e6b {
-    border-radius: 10px;
-    border: 1px solid var(--main-color);
     margin-right: var(--global-margin);
 }
 
-/* Content */
-.contentRegion__23e6b {
+/* Content + Sidebar */
+.contentRegion__23e6b,
+.visual-refresh .sidebarRegion__23e6b {
     border-radius: 10px;
     border: 1px solid var(--main-color);
 }
 
 /* Global */
 .visual-refresh .standardSidebarView__23e6b {
-    margin-top: calc(var(--global-margin)*3);
+    margin-top: calc(var(--global-margin) * 3);
 }
 
 /* Top bar */
@@ -160,46 +135,34 @@
 }
 
 /* ------------------- DM VOICE CALL ------------------- */
-/* Normal mode */
-.wrapper_cb9592 .callContainer_cb9592 {
-    border: 1px solid var(--main-color);
-    border-radius: 10px;
-    margin-top: var(--global-margin);
-}
-
-.visual-refresh .wrapper_cb9592 .title_f75fb0 {
+/* Title */
+.visual-refresh .title_f75fb0 {
     border: none;
     margin: 0px;
 }
 
 /* Fullscreen mode */
-.wrapper_cb9592 .callContainer_cb9592 {
-    border: 1px solid var(--main-color);
-    border-right: 1px solid var(--main-color) !important;
-    border-top: 1px solid var(--main-color) !important;
-    border-radius: 10px;
+.callContainer_cb9592 {
+    border: 1px solid var(--main-color) !important;
+    border-radius: 8px;
     margin-top: var(--global-margin);
 }
 
 /* Header */
-.visual-refresh .wrapper_cb9592 .container__9293f {
+.visual-refresh .container__9293f {
     border-radius: 10px;
     border: none;
     margin-top: var(--global-margin);
 }
 
-.wrapper_cb9592.fullScreen_cb9592 .videoWrapper__6981d {
-    border-radius: 10px;
-    border: 1px solid var(--main-color);
-}
-
-/* Real full screen */
-.wrapper_cb9592.fullScreen_cb9592:has(.noBorder__2f4f7) .videoWrapper__6981d {
+/* Hide user */
+.wrapper_cb9592:has(.noBorder__2f4f7) .videoWrapper__6981d {
     border: none;
 }
 
-/* Picture in picture */
-.borderRadius__6341f {
-    border-radius: 10px;
+/* Picture in picture + Fullscreen mode*/
+.borderRadius__6341f,
+.videoWrapper__6981d {
+    border-radius: 8px;
     border: 1px solid var(--main-color);
 }
