--- a/Themes/global.css
+++ b/Themes/global.css
@@ -136,7 +136,7 @@
 
 /* ------------------- DM VOICE CALL ------------------- */
 /* Title */
-.visual-refresh .title_f75fb0 {
+.visual-refresh .wrapper_cb9592 .title_f75fb0 {
     border: none;
     margin: 0px;
 }
@@ -149,7 +149,7 @@
 }
 
 /* Header */
-.visual-refresh .container__9293f {
+.visual-refresh .wrapper_cb9592 .container__9293f {
     border-radius: 10px;
     border: none;
     margin-top: var(--global-margin);
