--- a/Aki-Edition/User_Panel.css
+++ b/Aki-Edition/User_Panel.css
@@ -20,3 +20,39 @@
     color: var(--button-secondary-text);
     border-color: hsl(from var(--success-color) h s l / 0.5);
 }
+
+/* Old User Panel */
+/* Compact */
+.density-compact .panels_c48ade {
+    width: calc(100% - 2 * var(--global-margin) - var(--custom-guild-list-width) - 1.5 * calc(10px * var(--guildsize_v)/50)) !important;
+    left: calc(var(--global-margin) + var(--custom-guild-list-width) + 1.5 * calc(10px * var(--guildsize_v)/50)) !important;
+}
+
+/* Default */
+.density-default .panels_c48ade {
+    width: calc(100% - 2 * var(--global-margin) - var(--custom-guild-list-width) - 1.5 * calc(10px * var(--guildsize_v)/50) + 8px) !important;
+    left: calc(var(--global-margin) + var(--custom-guild-list-width) + 1.5 * calc(10px * var(--guildsize_v)/50) - 8px) !important;
+}
+
+/* Spacious */
+.density-cozy .panels_c48ade {
+    width: calc(100% - 2 * var(--global-margin) - var(--custom-guild-list-width) - 1.5 * calc(10px * var(--guildsize_v)/50) + 16px) !important;
+    left: calc(var(--global-margin) + var(--custom-guild-list-width) + 1.5 * calc(10px * var(--guildsize_v)/50) - 16px) !important;
+}
+
+/* Span server list to the bottom */
+nav.guilds_c48ade {
+    margin-bottom: 0 !important;
+}
+
+.visual-refresh .scroller_ef3116 {
+    margin-bottom: 0 !important;
+}
+
+/* Nameplate fix */
+.panels_c48ade .container__4bbc6 {
+    border-radius: inherit;
+    left: -4px;
+    height: 103%;
+    width: 104%;
+}
