--- a/Aki-Edition/User_Panel.css
+++ b/Aki-Edition/User_Panel.css
@@ -24,20 +24,20 @@
 /* Old User Panel */
 /* Compact */
 .density-compact .panels_c48ade {
-    width: calc(100% - 2 * var(--global-margin) - var(--custom-guild-list-width) - 1.5 * calc(10px * var(--guildsize_v)/50)) !important;
-    left: calc(var(--global-margin) + var(--custom-guild-list-width) + 1.5 * calc(10px * var(--guildsize_v)/50)) !important;
+    width: calc(100% - 2 * var(--global-margin) - var(--custom-guild-list-width) - 17px) !important;
+    left: calc(var(--global-margin) + var(--custom-guild-list-width) + 17px) !important;
 }
 
 /* Default */
 .density-default .panels_c48ade {
-    width: calc(100% - 2 * var(--global-margin) - var(--custom-guild-list-width) - 1.5 * calc(10px * var(--guildsize_v)/50) + 8px) !important;
-    left: calc(var(--global-margin) + var(--custom-guild-list-width) + 1.5 * calc(10px * var(--guildsize_v)/50) - 8px) !important;
+    width: calc(100% - 2 * var(--global-margin) - var(--custom-guild-list-width) - 9px) !important;
+    left: calc(var(--global-margin) + var(--custom-guild-list-width) + 9px) !important;
 }
 
 /* Spacious */
 .density-cozy .panels_c48ade {
-    width: calc(100% - 2 * var(--global-margin) - var(--custom-guild-list-width) - 1.5 * calc(10px * var(--guildsize_v)/50) + 16px) !important;
-    left: calc(var(--global-margin) + var(--custom-guild-list-width) + 1.5 * calc(10px * var(--guildsize_v)/50) - 16px) !important;
+    width: calc(100% - 2 * var(--global-margin) - var(--custom-guild-list-width) - 1px) !important;
+    left: calc(var(--global-margin) + var(--custom-guild-list-width) + 1px) !important;
 }
 
 /* Span server list to the bottom */
