--- a/Aki-Edition/User_Panel.css
+++ b/Aki-Edition/User_Panel.css
@@ -53,6 +53,7 @@ nav.guilds_c48ade {
 .panels_c48ade .container__4bbc6 {
     border-radius: inherit;
     left: -4px;
+    top: 0px;
     height: 103%;
     width: 104%;
 }
