--- a/Hyprcord-Aki.css
+++ b/Hyprcord-Aki.css
@@ -42,4 +42,5 @@
     --background-image: url(https://i.imgur.com/zU7YY60.jpeg);
     --global-margin: 15px;
     --guildsize: 57;
+    --bordersize: 1px;
 }
