--- a/Hyprcord.css
+++ b/Hyprcord.css
@@ -18,4 +18,5 @@
     /* Background image */
     --background-image: url(https://i.imgur.com/zU7YY60.jpeg);
     --global-margin: 20px;
+    --bordersize: 1px;
 }
