--- a/Themes/server.css
+++ b/Themes/server.css
@@ -4,7 +4,7 @@
 .visual-refresh .title_f75fb0,
 .members_c8ffbb {
     border-radius: 10px;
-    border: 1px solid var(--main-color);
+    border: var(--bordersize, 1px) solid var(--main-color);
     margin-top: var(--global-margin);
 }
 
@@ -34,7 +34,7 @@
 /* Server list */
 .visual-refresh .scroller_ef3116 {
     border-radius: 10px;
-    border: 1px solid var(--main-color) !important;
+    border: var(--bordersize, 1px) solid var(--main-color) !important;
     margin-top: var(--global-margin) !important;
     margin-bottom: var(--global-margin) !important;
 }
@@ -48,12 +48,12 @@
 .isExpanded__48112 .folderGroupBackground__48112 {
     background-color: var(--main-color);
     opacity: 0.3;
-    border: 1px solid var(--text-normal);
+    border: var(--bordersize, 1px) solid var(--text-normal);
 }
 
 .folderPreviewWrapper__48112 {
     --custom-preview-background: color-mix(in srgb, var(--main-color), transparent 30%);
-    border: 1px solid var(--text-muted);
+    border: var(--bordersize, 1px) solid var(--text-muted);
 }
 
 .folderIcon__48112 {
@@ -64,14 +64,14 @@
 .visual-refresh .privateChannels__35e86,
 .visual-refresh .container__2637a {
     border-radius: 10px;
-    border: 1px solid var(--main-color);
+    border: var(--bordersize, 1px) solid var(--main-color);
     margin: var(--global-margin);
 }
 
 /* User panel */
 .visual-refresh .panels_c48ade {
     border-radius: 10px;
-    border: 1px solid var(--main-color);
+    border: var(--bordersize, 1px) solid var(--main-color);
     padding: 0px;
     padding-left: 5px;
     padding-right: 5px;
