--- a/Themes/nameplate.css
+++ b/Themes/nameplate.css
@@ -6,7 +6,7 @@
 
 /* Nameplate in user panel */
 .panels_c48ade .container__4bbc6 {
-    border-radius: 8px;
+    border-radius: inherit;
     left: -4px;
     height: 103%;
     width: 103%;
