--- a/Themes/global.css
+++ b/Themes/global.css
@@ -18,6 +18,11 @@
     padding-right: var(--global-margin);
 }
 
+/* Chat contents */
+.scrollerInner__36d07 {
+    padding-left: calc(var(--global-margin) - var(--space-xs));
+}
+
 /* Link embed */
 .visual-refresh .embedFull__623de {
     border: 1px solid var(--main-color) !important;
