--- a/Aki-Edition/User_Panel.css
+++ b/Aki-Edition/User_Panel.css
@@ -22,22 +22,9 @@
 }
 
 /* Old User Panel */
-/* Compact */
-.density-compact .panels_c48ade {
-    width: calc(100% - 2 * var(--global-margin) - var(--custom-guild-list-width) - 17px) !important;
-    left: calc(var(--global-margin) + var(--custom-guild-list-width) + 17px) !important;
-}
-
-/* Default */
-.density-default .panels_c48ade {
-    width: calc(100% - 2 * var(--global-margin) - var(--custom-guild-list-width) - 9px) !important;
-    left: calc(var(--global-margin) + var(--custom-guild-list-width) + 9px) !important;
-}
-
-/* Spacious */
-.density-cozy .panels_c48ade {
-    width: calc(100% - 2 * var(--global-margin) - var(--custom-guild-list-width) - 1px) !important;
-    left: calc(var(--global-margin) + var(--custom-guild-list-width) + 1px) !important;
+.panels_c48ade {
+    width: calc(100% - 2 * var(--global-margin) - 1px * var(--guildsize) - 2 * calc(10px * var(--guildsize) / 50)) !important;
+    left: calc(var(--global-margin) + 1px * var(--guildsize) + 2 * calc(10px * var(--guildsize) / 50)) !important;
 }
 
 /* Span server list to the bottom */
