--- a/Themes/nameplate.css
+++ b/Themes/nameplate.css
@@ -8,6 +8,7 @@
 .panels_c48ade .container__4bbc6 {
     border-radius: inherit;
     left: -4px;
+    top: 0px;
     height: 103%;
     width: 103%;
 }
