--- a/Aki-Edition/User_Panel.css
+++ b/Aki-Edition/User_Panel.css
@@ -22,7 +22,7 @@
 }
 
 /* Old User Panel */
-.panels_c48ade {
+.content_c48ade .panels_c48ade {
     width: calc(100% - 2 * var(--global-margin) - 1px * var(--guildsize) - 2 * calc(10px * var(--guildsize) / 50)) !important;
     left: calc(var(--global-margin) + 1px * var(--guildsize) + 2 * calc(10px * var(--guildsize) / 50)) !important;
 }
